src/ic-cdk-macros/tests/pass/query.rs
use ic_cdk_macros::query;

#[query]
fn method() {}

fn main() {}