src/ic-cdk-macros/tests/compile_fail/no_self.rs
use ic_cdk_macros::query;

#[query]
fn method(self) {}

fn main() {}
